add a simple cli example

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,5 @@
 workspace.members = ["bslive"]
 workspace.resolver = "2"
+
+[workspace.dependencies]
+tokio = { version = "1.37.0", features = ["full"] }
