--- a/bslive/Cargo.toml
+++ b/bslive/Cargo.toml
@@ -8,8 +8,9 @@ crate-type = ["cdylib"]
 
 [dependencies]
 # Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
-napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
+napi = { version = "2.12.2", default-features = false, features = ["napi4", "tokio_rt", "tokio_full"] }
 napi-derive = "2.12.2"
+tokio = { workspace = true }
 
 [build-dependencies]
 napi-build = "2.0.1"
