--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -135,17 +135,9 @@ jobs:
         with:
           image: ${{ matrix.settings.docker }}
           options: '--user 0:0 -v ${{ github.workspace }}/.cargo-cache/git/db:/usr/local/cargo/git/db -v ${{ github.workspace }}/.cargo/registry/cache:/usr/local/cargo/registry/cache -v ${{ github.workspace }}/.cargo/registry/index:/usr/local/cargo/registry/index -v ${{ github.workspace }}:/build -w /build'
-          run: |
-            cd crates/bsnext_client
-            npm i
-            cd -
-            ${{ matrix.settings.build }}
+          run: ${{ matrix.settings.build }}
       - name: Build
-        run: |
-          cd crates/bsnext_client
-          npm i
-          cd -
-          ${{ matrix.settings.build }}
+        run: ${{ matrix.settings.build }}
         if: ${{ !matrix.settings.docker }}
         shell: bash
       - name: Upload artifact
