--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -28,14 +28,14 @@ jobs:
           - host: macos-latest
             target: x86_64-apple-darwin
             build: yarn build --target x86_64-apple-darwin
-          - host: windows-latest
-            build: yarn build --target x86_64-pc-windows-msvc
-            target: x86_64-pc-windows-msvc
-          - host: windows-latest
-            build: |
-              yarn build --target i686-pc-windows-msvc
-              yarn test
-            target: i686-pc-windows-msvc
+#          - host: windows-latest
+#            build: yarn build --target x86_64-pc-windows-msvc
+#            target: x86_64-pc-windows-msvc
+#          - host: windows-latest
+#            build: |
+#              yarn build --target i686-pc-windows-msvc
+#              yarn test
+#            target: i686-pc-windows-msvc
 #          - host: ubuntu-latest
 #            target: x86_64-unknown-linux-gnu
 #            docker: ghcr.io/napi-rs/napi-rs/nodejs-rust:lts-debian
@@ -73,9 +73,9 @@ jobs:
 #              set -e &&
 #              rustup target add aarch64-unknown-linux-musl &&
 #              yarn build --target aarch64-unknown-linux-musl
-          - host: windows-latest
-            target: aarch64-pc-windows-msvc
-            build: yarn build --target aarch64-pc-windows-msvc
+#          - host: windows-latest
+#            target: aarch64-pc-windows-msvc
+#            build: yarn build --target aarch64-pc-windows-msvc
 #          - host: ubuntu-latest
 #            target: riscv64gc-unknown-linux-gnu
 #            setup: |
@@ -146,55 +146,6 @@ jobs:
           name: bindings-${{ matrix.settings.target }}
           path: ${{ env.APP_NAME }}.*.node
           if-no-files-found: error
-  build-freebsd:
-    runs-on: macos-13
-    name: Build FreeBSD
-    steps:
-      - uses: actions/checkout@v4
-      - name: Build
-        id: build
-        uses: cross-platform-actions/action@v0.24.0
-        env:
-          DEBUG: napi:*
-          RUSTUP_IO_THREADS: 1
-        with:
-          operating_system: freebsd
-          version: '13.2'
-          memory: 8G
-          cpu_count: 3
-          environment_variables: DEBUG RUSTUP_IO_THREADS
-          shell: bash
-          run: |
-            sudo pkg install -y -f curl node libnghttp2 npm
-            sudo npm install -g yarn --ignore-scripts
-            curl https://sh.rustup.rs -sSf --output rustup.sh
-            sh rustup.sh -y --profile minimal --default-toolchain stable
-            source "$HOME/.cargo/env"
-            echo "~~~~ rustc --version ~~~~"
-            rustc --version
-            echo "~~~~ node -v ~~~~"
-            node -v
-            echo "~~~~ yarn --version ~~~~"
-            yarn --version
-            echo "~~~~ installing typeshare ~~~~"
-            yarn --version
-            pwd
-            ls -lah
-            whoami
-            env
-            freebsd-version
-            yarn install
-            yarn build
-            yarn test
-            rm -rf node_modules
-            rm -rf target
-            rm -rf .yarn/cache
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: bindings-freebsd
-          path: ${{ env.APP_NAME }}.*.node
-          if-no-files-found: error
   test-macOS-windows-binding:
     name: Test bindings on ${{ matrix.settings.target }} - node@${{ matrix.node }}
     needs:
@@ -205,8 +156,8 @@ jobs:
         settings:
           - host: macos-latest
             target: x86_64-apple-darwin
-          - host: windows-latest
-            target: x86_64-pc-windows-msvc
+#          - host: windows-latest
+#            target: x86_64-pc-windows-msvc
         node:
           - '18'
           - '20'
@@ -441,8 +392,8 @@ jobs:
     name: Publish
     runs-on: ubuntu-latest
     needs:
-      - build-freebsd
-      - test-macOS-windows-binding
+#      - build-freebsd
+#      - test-macOS-windows-binding
 #      - test-linux-x64-gnu-binding
 #      - test-linux-x64-musl-binding
 #      - test-linux-aarch64-gnu-binding
