--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,4 @@ random_word = { version = "0.4.3", features = ["en"] }
 toml = { version = "0.8.12" }
 mime_guess = "2.0.4"
 tempfile = "3.10.1"
+insta = { version = "1.38.0", features = ["yaml"] }
