--- a/crates/bsnext_system/Cargo.toml
+++ b/crates/bsnext_system/Cargo.toml
@@ -26,4 +26,4 @@ random_word = { workspace = true }
 tempfile = { workspace = true }
 
 [dev-dependencies]
-insta = { version = "1.38.0", features = ["yaml"] }
+insta = { workspace = true }
