--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ tokio-stream = { version = "0.1.15", features = ["sync"] }
 futures = "0.3.30"
 futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
 tower = { version = "0.4.13" }
-tower-http = { version = "0.5.0", features = ['trace', 'fs', 'compression-full', 'decompression-full', 'catch-panic', 'cors', 'timeout'] }
+tower-http = { version = "0.5.0", features = ['trace', 'fs', 'compression-full', 'decompression-full', 'catch-panic', 'cors', 'timeout', 'set-header'] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
 actix = "0.13.1"
