--- a/crates/bsnext_client/package.json
+++ b/crates/bsnext_client/package.json
@@ -5,10 +5,11 @@
   "main": "index.js",
   "scripts": {
     "tsc": "tsc",
-    "build": "esbuild ts/index.ts --bundle --outdir=dist --format=esm",
+    "build": "npm run build --workspaces",
     "test": "echo \"Error: no test specified\" && exit 1",
     "schema": "ts-to-zod generated/dto.ts generated/schema.ts"
   },
+  "workspaces": ["inject", "ui"],
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -20,6 +21,7 @@
     "typescript": "^5.4.5",
     "@types/node": "18.19.25",
     "ts-to-zod": "^3.8.2",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "prettier": "^3.2.5"
   }
 }
