support log file writing

--- a/examples/kitchen-sink/input.yml
+++ b/examples/kitchen-sink/input.yml
@@ -35,7 +35,7 @@ servers:
       - path: /other
         dir: ./examples
       - path: /index.html
-        dir: ./index.html
+        dir: examples/kitchen-sink/input.html
       - path: /start
         html: <p>helldsosss wosrld</p>
       - path: /ws.js
