--- a/bsnext/Cargo.toml
+++ b/bsnext/Cargo.toml
@@ -9,6 +9,7 @@ bsnext_input = { path = "../crates/bsnext_input" }
 bsnext_fs = { path = "../crates/bsnext_fs" }
 bsnext_tracing = { path = "../crates/bsnext_tracing" }
 bsnext_system = { path = "../crates/bsnext_system" }
+bsnext_dto = { path = "../crates/bsnext_dto" }
 bsnext_output = { path = "../crates/bsnext_output" }
 
 clap = { workspace = true }
