--- a/crates/bsnext_dto/Cargo.toml
+++ b/crates/bsnext_dto/Cargo.toml
@@ -1,17 +1,16 @@
 [package]
-name = "bsnext_output"
+name = "bsnext_dto"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bsnext_core = { path = "../bsnext_core" }
-bsnext_dto = { path = "../bsnext_dto" }
+bsnext_input = { path = "../bsnext_input" }
+bsnext_fs = { path = "../bsnext_fs" }
 
-ansi_term = { version = "0.12.1" }
-
-anyhow = { workspace = true }
-clap = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+anyhow = { workspace = true }
+actix = { workspace = true }
+typeshare = { workspace = true }
