--- a/crates/bsnext_system/Cargo.toml
+++ b/crates/bsnext_system/Cargo.toml
@@ -10,6 +10,7 @@ bsnext_input = { path = "../bsnext_input" }
 bsnext_tracing = { path = "../bsnext_tracing" }
 bsnext_core = { path = "../bsnext_core" }
 bsnext_fs = { path = "../bsnext_fs" }
+bsnext_dto = { path = "../bsnext_dto" }
 bsnext_example = { path = "../bsnext_example" }
 rand = "0.8.5"
 
