--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,7 @@ futures = "0.3.30"
 futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
 tower = { version = "0.4.13" }
 tower-http = { version = "0.5.0", features = ['trace', 'fs', 'compression-full', 'decompression-full', 'catch-panic', 'cors', 'timeout', 'set-header'] }
-tracing = "0.1.40"
-tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
+tracing = { version = "0.1.35", default-features = false, features = ["std", "attributes"] }
 actix = "0.13.1"
 actix-rt = "2.9.0"
 anyhow = "1.0.69"
