--- a/crates/bsnext_tracing/Cargo.toml
+++ b/crates/bsnext_tracing/Cargo.toml
@@ -6,5 +6,19 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tracing-subscriber = { workspace = true }
 clap = { workspace = true }
+opentelemetry = { version = "0.23.0", features = ["trace", "metrics"] }
+opentelemetry_sdk = { version = "0.23.0", default-features = false, features = ["trace", "rt-tokio"] }
+opentelemetry-jaeger = "0.22.0"
+opentelemetry-stdout = { version = "0.4.0", features = ["trace", "metrics"] }
+opentelemetry-otlp = { version = "0.16.0", features = ["metrics"] }
+opentelemetry-semantic-conventions = "0.15.0"
+
+tracing = { workspace = true }
+tracing-error = "0.2.0"
+tracing-opentelemetry = { version = "0.24.0" }
+
+[dependencies.tracing-subscriber]
+version = "0.3.0"
+default-features = false
+features = ["registry", "std", "fmt", "json", "env-filter"]
