--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,8 @@ tokio = { version = "1", features = ["full"] }
 tokio-stream = { version = "0.1.15", features = ["sync"] }
 futures = "0.3.30"
 futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
-tower = { version = "0.4.13" }
-tower-http = { version = "0.5.0", features = ['trace', 'fs', 'compression-full', 'decompression-full', 'catch-panic', 'cors', 'timeout', 'set-header'] }
+tower = { version = "0.4.13", features = ['steer'] }
+tower-http = { version = "0.5.0", features = ['trace', 'fs', 'compression-full', 'decompression-full', 'catch-panic', 'cors', 'timeout', 'set-header', ] }
 tracing = { version = "0.1.35", default-features = false, features = ["std", "attributes"] }
 actix = "0.13.1"
 actix-rt = "2.9.0"
