--- a/crates/bsnext_core/Cargo.toml
+++ b/crates/bsnext_core/Cargo.toml
@@ -41,3 +41,6 @@ thiserror = { workspace = true }
 serde_json = { workspace = true }
 bytes = { workspace = true }
 http = { workspace = true }
+
+[[example]]
+name = "abc"
