--- a/crates/bsnext_resp/Cargo.toml
+++ b/crates/bsnext_resp/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-urlpattern = { version = "0.2.0" }
+urlpattern = { version = "0.3.0" }
 
 tracing = { workspace = true }
 axum = { workspace = true }
@@ -16,3 +16,7 @@ serde = { workspace = true }
 serde_yaml = { workspace = true }
 http-body-util = { workspace = true }
 anyhow = "1.0.86"
+
+[dev-dependencies]
+tokio = { workspace = true }
+tower = { workspace = true }
