--- a/examples/kitchen-sink/bslive.yml
+++ b/examples/kitchen-sink/bslive.yml
@@ -23,6 +23,9 @@ servers:
       - path: /
         html: "hello world theres"
         cors: true
+        headers:
+          content-type: haha
+          access-control-allow-origin: haha
   #  - bind_address: 0.0.0.0:3001
   #    routes:
   #      - path: /
