--- a/package.json
+++ b/package.json
@@ -34,7 +34,11 @@
   "license": "MIT",
   "devDependencies": {
     "@napi-rs/cli": "^2.18.3",
-    "ava": "^6.0.1"
+    "@playwright/test": "^1.46.1",
+    "@types/node": "20.14.8",
+    "ava": "^6.0.1",
+    "typescript": "^5.5.4",
+    "zod": "^3.23.8"
   },
   "ava": {
     "timeout": "3m"
