--- a/crates/bsnext_client/package.json
+++ b/crates/bsnext_client/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "tsc": "tsc",
+    "tsc:watch": "tsc --watch",
     "build": "npm run build --workspaces",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npm run tsc && npm run schema",
     "schema": "ts-to-zod generated/dto.ts generated/schema.ts",
     "postschema": "esbuild --bundle --external:zod --format=esm generated/schema.ts > generated/schema.js"
   },
@@ -26,6 +27,7 @@
     "@types/node": "18.19.25",
     "ts-to-zod": "^3.11.0",
     "zod": "^3.22.4",
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "lit": "^3.2.0"
   }
 }
