--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -48,9 +48,12 @@ jobs:
       - name: Install npm dependencies
         run: npm ci
 
+      - name: Npm test
+        run: npm test
+
       # Build the Rust binary with napi
       - name: Build Rust Binary with napi
-        run: npm run build -- --target aarch64-apple-darwin
+        run: npm run build:debug -- --target aarch64-apple-darwin
 
       - name: Install Playwright Browsers
         run: npx playwright install chromium --with-deps
