--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
     "build": "napi build --cargo-name bslive --platform --release",
     "build:debug": "napi build --cargo-name bslive --platform",
     "prepublishOnly": "napi prepublish -t npm",
-    "test": "npm run tsc && ava",
+    "test": "npm run tsc",
     "posttest": "npm run test --workspaces",
+    "test:build": "ava",
     "universal": "napi universal",
     "version": "napi version",
     "tsc": "tsc",
