--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -48,12 +48,15 @@ jobs:
       - name: Install npm dependencies
         run: npm ci
 
-      - name: Npm test
+      - name: Npm test unit
         run: npm test
 
       # Build the Rust binary with napi
       - name: Build Rust Binary with napi
         run: npm run build:debug -- --target aarch64-apple-darwin
+
+      - name: Npm test (binary)
+        run: npm test:build
 
       - name: Install Playwright Browsers
         run: npx playwright install chromium --with-deps
