--- a/crates/bsnext_client/inject/package.json
+++ b/crates/bsnext_client/inject/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "esbuild src/index.ts --bundle --outdir=dist --format=esm"
+    "build:client": "esbuild src/index.ts --bundle --outdir=dist --format=esm"
   },
   "keywords": [],
   "author": "",
