--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "zod": "^3.23.8"
   },
   "workspaces": [
-    "./crates/bsnext_client"
+    "./crates/bsnext_client",
+    "./crates/bsnext_client/ui",
+    "./crates/bsnext_client/inject"
   ],
   "scripts": {
     "artifacts": "napi artifacts",
     "build": "napi build --cargo-name bslive --platform --release",
     "build:debug": "napi build --cargo-name bslive --platform",
+    "build:client": "npm run build:client --workspaces --if-present",
     "prepublishOnly": "napi prepublish -t npm",
     "test": "npm run tsc",
     "posttest": "npm run test --workspaces",
