--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -46,6 +46,9 @@ jobs:
       - name: Npm test (binary)
         run: npm run test:build
 
+      - name: Npm run build:client
+        run: npm run build:client
+
       - name: Install Playwright Browsers
         run: npx playwright install chromium --with-deps
 
