Add support for react-router - closes #15

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "./crates/bsnext_client",
     "./crates/bsnext_client/ui",
     "./crates/bsnext_client/inject",
-    "./examples/openai"
+    "./examples/openai",
+    "./examples/react-router"
   ],
   "scripts": {
     "artifacts": "napi artifacts",
