--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -24,7 +24,7 @@ jobs:
         settings:
           - host: macos-latest
             target: aarch64-apple-darwin
-            build: npm run build -- --target x86_64-apple-darwin
+            build: npm run build -- --target aarch64-apple-darwin
     name: stable - ${{ matrix.settings.target }} - node@20
     runs-on: ${{ matrix.settings.host }}
     steps:
