bslive-22 improve/replace live reload's console.log output

--- a/crates/bsnext_client/inject/package.json
+++ b/crates/bsnext_client/inject/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build:client": "esbuild src/index.ts --bundle --outdir=dist --format=esm",
+    "dev": "npm run build:client -- --sourcemap=inline --watch",
     "build:client:debug": "npm run build:client -- --sourcemap=inline"
   },
   "keywords": [],
