--- a/crates/bsnext_tracing/Cargo.toml
+++ b/crates/bsnext_tracing/Cargo.toml
@@ -14,6 +14,7 @@ opentelemetry-stdout = { version = "0.4.0", features = ["trace", "metrics"] }
 opentelemetry-otlp = { version = "0.16.0", features = ["metrics"] }
 opentelemetry-semantic-conventions = "0.15.0"
 
+serde = { workspace = true }
 tracing = { workspace = true }
 tracing-error = "0.2.0"
 tracing-opentelemetry = { version = "0.24.0" }
