adding a dedicated type for path definitions

--- a/crates/bsnext_core/Cargo.toml
+++ b/crates/bsnext_core/Cargo.toml
@@ -20,7 +20,7 @@ axum-extra = { version = "0.9.3", features = ["typed-header"] }
 hyper = { version = "1.0.0", features = ["full"] }
 hyper-tls = { version = "0.6.0" }
 hyper-util = { version = "0.1.1", features = ["client-legacy"] }
-matchit = { version = "0.7.3" }
+matchit = { workspace = true }
 htmlescape = { version = "0.3.1" }
 
 mime_guess = { workspace = true }
