--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ workspace.resolver = "2"
 [workspace.dependencies]
 clap = { version = "4.5.3", features = ["derive"] }
 axum = { version = "0.7.5", features = ["ws"] }
+matchit = { version = "0.7.3" }
 tokio = { version = "1", features = ["full"] }
 tokio-stream = { version = "0.1.15", features = ["sync"] }
 futures = "0.3.30"
