--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,3 +32,4 @@ toml = { version = "0.8.12" }
 mime_guess = "2.0.4"
 tempfile = "3.10.1"
 insta = { version = "1.38.0", features = ["yaml"] }
+miette = { version = "7.2.0", features = ["fancy", "syntect-highlighter"] }
