--- a/crates/bsnext_input/Cargo.toml
+++ b/crates/bsnext_input/Cargo.toml
@@ -10,6 +10,7 @@ bsnext_resp = { path = "../bsnext_resp" }
 bsnext_tracing = { path = "../bsnext_tracing" }
 
 markdown = { version = "1.0.0-alpha.16" }
+miette = { workspace = true }
 
 random_word = { workspace = true }
 matchit = { workspace = true }
