--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,3 +36,10 @@ mime_guess = "2.0.4"
 tempfile = "3.10.1"
 insta = { version = "1.38.0", features = ["yaml"] }
 miette = { version = "7.2.0", features = ["fancy", "syntect-highlighter"] }
+
+[profile.release]
+strip = true  # Automatically strip symbols from the binary.
+opt-level = "z"
+lto = true
+codegen-units = 1
+panic = "abort"
