--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,7 +38,7 @@ insta = { version = "1.38.0", features = ["yaml"] }
 miette = { version = "7.2.0", features = ["fancy", "syntect-highlighter"] }
 
 [profile.release]
-strip = true  # Automatically strip symbols from the binary.
+strip = true
 opt-level = "z"
 lto = true
 codegen-units = 1
