--- a/crates/bsnext_system/Cargo.toml
+++ b/crates/bsnext_system/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 bsnext_input = { path = "../bsnext_input" }
+bsnext_md = { path = "../bsnext_md" }
+bsnext_yaml = { path = "../bsnext_yaml" }
 bsnext_tracing = { path = "../bsnext_tracing" }
 bsnext_core = { path = "../bsnext_core" }
 bsnext_fs = { path = "../bsnext_fs" }
