--- a/crates/bsnext_md/Cargo.toml
+++ b/crates/bsnext_md/Cargo.toml
@@ -14,3 +14,4 @@ serde = { workspace = true }
 serde_yaml = { workspace = true }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
+insta = { workspace = true }
