--- a/inject/package.json
+++ b/inject/package.json
@@ -6,9 +6,13 @@
   "scripts": {
     "build:client": "esbuild src/index.ts --bundle --outdir=dist --format=esm --minify --metafile=dist/meta.json",
     "dev": "npm run build:client -- --sourcemap=inline --watch",
-    "build:client:debug": "npm run build:client -- --sourcemap=inline"
+    "build:debug": "npm run build:client -- --sourcemap=inline"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "rxjs": "^7.8.1",
+    "zod": "^3.22.4"
+  }
 }
