--- a/ui/package.json
+++ b/ui/package.json
@@ -7,12 +7,14 @@
   "type": "module",
   "scripts": {
     "build:client": "esbuild src/index.ts --bundle --outdir=dist --format=esm",
-    "dev": "npm run build -- --watch"
+    "dev": "npm run build:client -- --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "lit": "^3.1.3"
+    "lit": "^3.1.3",
+    "rxjs": "^7.8.1",
+    "zod": "^3.22.4"
   }
 }
