making the client smarter

--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "typescript": "^5.6.3",
     "zod": "^3.23.8",
     "esbuild": "^0.24.0",
-    "@types/node": "20.17.6"
+    "@types/node": "20.17.6",
+    "prettier": "^3.3.3"
   },
   "workspaces": [
     "ui",
     "inject",
     "generated",
-    "./crates/bsnext_client",
     "./examples/openai",
     "./examples/react-router"
   ],
@@ -42,7 +42,7 @@
     "version": "napi version",
     "tsc": "tsc",
     "tsc:watch": "tsc --watch",
-    "lint": "deno fmt tests"
+    "fmt": "prettier tests inject ui --write"
   },
   "napi": {
     "name": "bslive",
