--- a/bslive.yml
+++ b/bslive.yml
@@ -1,5 +1,7 @@
 servers:
   - bind_address: 0.0.0.0:3000
+    clients:
+      log: info
     routes:
       - path: /
         dir: examples/basic/public
